--- a/po/de.po
+++ b/po/de.po
@@ -12,9 +12,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-11-20 13:46+0100\n"
-"PO-Revision-Date: 2015-11-05 19:24+0000\n"
-"Last-Translator: pitfd <pitfd@openmailbox.org>\n"
+"POT-Creation-Date: 2015-12-07 10:57+0100\n"
+"PO-Revision-Date: 2015-12-06 20:01+0000\n"
+"Last-Translator: ilu lu\n"
 "Language-Team: German (http://www.transifex.com/solydxk/device-driver-"
 "manager/language/de/)\n"
 "Language: de\n"
@@ -23,33 +23,33 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: ../usr/lib/ddm/ddm.py:51 ../usr/lib/ddm/main.py:28
+#: ../usr/lib/ddm/ddm.py:55 ../usr/lib/ddm/main.py:32
 #: ../usr/share/kde4/services/kcm_device_driver_manager.desktop.in.h:1
 #: ../usr/share/applications/ddm.desktop.in.h:1
 msgid "Device Driver Manager"
 msgstr "Device Driver Manager"
 
-#: ../usr/lib/ddm/ddm.py:52 ../usr/lib/ddm/ddm.py:211
+#: ../usr/lib/ddm/ddm.py:56 ../usr/lib/ddm/ddm.py:215
 msgid "Install"
 msgstr "Installieren"
 
-#: ../usr/lib/ddm/ddm.py:53
+#: ../usr/lib/ddm/ddm.py:57
 msgid "Help"
 msgstr "Hilfe"
 
-#: ../usr/lib/ddm/ddm.py:54
+#: ../usr/lib/ddm/ddm.py:58
 msgid "Quit"
 msgstr "Schließen"
 
-#: ../usr/lib/ddm/ddm.py:55
+#: ../usr/lib/ddm/ddm.py:59
 msgid "Use Backports"
 msgstr "Verwende Backports"
 
-#: ../usr/lib/ddm/ddm.py:168
+#: ../usr/lib/ddm/ddm.py:172
 msgid "No internet connection"
 msgstr "Keine Internetverbindung"
 
-#: ../usr/lib/ddm/ddm.py:169
+#: ../usr/lib/ddm/ddm.py:173
 msgid ""
 "You need an internet connection to install the additional software.\n"
 "Please, connect to the internet and try again."
@@ -58,7 +58,7 @@ msgstr ""
 "benötigt.\n"
 "Bitte verbinden und noch einmal versuchen."
 
-#: ../usr/lib/ddm/ddm.py:176
+#: ../usr/lib/ddm/ddm.py:180
 msgid ""
 "You have selected to install drivers from the backports repository whenever "
 "they are available.\n"
@@ -69,23 +69,23 @@ msgid ""
 "\n"
 "Are you sure you want to continue?"
 msgstr ""
-"Sie haben sich dafür entscieden, Treiber vom den Backports Repository zu "
-"installieren, sobald diese verfügbar sind \n"
+"Sie haben sich entschieden, Treiber aus den Backports-Quellen zu "
+"installieren, sofern diese verfügbar sind \n"
 "\n"
-"Obwohl Sie dadurch aktueller Progammversionen nutzen können, \n"
-"erhöhen Sie dadurch das Risiko von Fehlern bei der Programmausführung \n"
+"Sie können dadurch aktuellere Progammversionen nutzen, \n"
+"erhöhen aber das Risiko von Fehlern bei der Programmausführung .\n"
 "\n"
 "Sind Sie sicher, dass Sie fortfahren wollen?"
 
-#: ../usr/lib/ddm/ddm.py:211
+#: ../usr/lib/ddm/ddm.py:215
 msgid "Device"
 msgstr "Gerät"
 
-#: ../usr/lib/ddm/ddm.py:227
+#: ../usr/lib/ddm/ddm.py:231
 msgid "Remove kernel"
 msgstr "Linux-Kernel entfernen"
 
-#: ../usr/lib/ddm/ddm.py:228
+#: ../usr/lib/ddm/ddm.py:232
 msgid ""
 "You cannot remove a booted kernel.\n"
 "Please, boot another kernel and try again."
@@ -93,23 +93,23 @@ msgstr ""
 "Ein geladener Kernel kann nicht entfernt werden.\n"
 "Bitte boote einen anderen Kernel und versuche es erneut."
 
-#: ../usr/lib/ddm/ddm.py:249
-msgid "Hardware scan"
-msgstr "Scanne Hardware"
-
 #: ../usr/lib/ddm/ddm.py:253
+msgid "Hardware scan"
+msgstr "Untersuche Hardware"
+
+#: ../usr/lib/ddm/ddm.py:257
 msgid "There are no available drivers for your hardware:"
 msgstr "Es sind keine Treiber für diese Hardware verfügbar."
 
-#: ../usr/lib/ddm/ddm.py:259
+#: ../usr/lib/ddm/ddm.py:263
 msgid "DDM did not find any supported hardware."
 msgstr "DDM konnte keine unterstützte Hardware finden."
 
-#: ../usr/lib/ddm/ddm.py:358
+#: ../usr/lib/ddm/ddm.py:362
 msgid "ATI FirePro/Gl card found"
 msgstr "ATI FirePro/Gl Grafikkarte wurde gefunden"
 
-#: ../usr/lib/ddm/ddm.py:359
+#: ../usr/lib/ddm/ddm.py:363
 msgid ""
 "Installing the proprietary driver for an ATI FirePro/Gl card may render your "
 "system unbootable.\n"
@@ -122,27 +122,27 @@ msgstr ""
 "\n"
 "Fahren Sie auf eigenes Risiko fort."
 
-#: ../usr/lib/ddm/ddm.py:529
+#: ../usr/lib/ddm/ddm.py:533
 msgid "PAE capable system"
 msgstr "PAE fähiges System"
 
-#: ../usr/lib/ddm/ddm.py:642
+#: ../usr/lib/ddm/ddm.py:646
 msgid "Run as root."
 msgstr "Als Administrator ausführen."
 
-#: ../usr/lib/ddm/ddm.py:644
+#: ../usr/lib/ddm/ddm.py:648
 msgid "Wrong arguments passed to ddm."
-msgstr "Ungültige Parameter an ddm übergeben."
+msgstr "Diese Parameter für DDM sind ungültig."
 
-#: ../usr/lib/ddm/ddm.py:646
+#: ../usr/lib/ddm/ddm.py:650
 msgid "There are no driver available."
 msgstr "Es sind keine Treiber verfügbar."
 
-#: ../usr/lib/ddm/ddm.py:648
+#: ../usr/lib/ddm/ddm.py:652
 msgid "The driver cannot be found in repository."
-msgstr "Der Treiber kann im Repository nicht gefunden werden."
+msgstr "Der Treiber kann in den Paketquellen nicht gefunden werden."
 
-#: ../usr/lib/ddm/ddm.py:650
+#: ../usr/lib/ddm/ddm.py:654
 msgid ""
 "Download error.\n"
 "Check your internet connection."
@@ -150,15 +150,15 @@ msgstr ""
 "Fehler beim Download.\n"
 "Bitte Internetverbindung überprüfen."
 
-#: ../usr/lib/ddm/ddm.py:652
+#: ../usr/lib/ddm/ddm.py:656
 msgid "DDM cannot purge the driver."
 msgstr "DDM kann den Treiber nicht vollständig entfernen."
 
-#: ../usr/lib/ddm/ddm.py:654
+#: ../usr/lib/ddm/ddm.py:658
 msgid "This card is not supported."
-msgstr "Diese Grafikkarte ist nicht unterstützt"
+msgstr "Diese Grafikkarte wird nicht unterstützt."
 
-#: ../usr/lib/ddm/ddm.py:656
+#: ../usr/lib/ddm/ddm.py:660
 msgid ""
 "There was an error during the installation.\n"
 "Please, run 'sudo apt-get -f install' in a terminal.\n"
@@ -166,30 +166,29 @@ msgid ""
 msgstr ""
 "Es gab einen Fehler während der Installation.\n"
 "Bitte 'sudo apt-get -f install' im Terminal ausführen.\n"
-"Falls Hilfe benötigt wird, besucht unser Forum http://forums.solydxk.com"
+"Hilfe gibt es in unserem Forum http://forums.solydxk.com"
 
-#: ../usr/lib/ddm/ddm.py:661
+#: ../usr/lib/ddm/ddm.py:665
 msgid "The software has been successfully installed."
 msgstr "Die Software wurde erfolgreich installiert."
 
-#: ../usr/lib/ddm/ddm.py:662
+#: ../usr/lib/ddm/ddm.py:666
 msgid "You will need to restart your system."
 msgstr "Das System muß neu gestartet werden."
 
-#: ../usr/lib/ddm/main.py:29
+#: ../usr/lib/ddm/main.py:33
 msgid ""
 "Device Driver Manager helps to install proprietary drivers for your "
 "hardware.\n"
 "Only install proprietary drivers if you are sure you really need them.\n"
 "Usually open drivers are enough."
 msgstr ""
-"Der Device Driver Manager ist Ihnen bei der Installation proprietärer "
-"Treiber für Ihre Hardware behilflich.\n"
-"Installieren Sie proprietäre Treiber nur dann, wenn Sie sie wirklich "
-"benötigen\n"
-"Normalerweise reichen open-source Treiber aus."
+"Der Device Driver Manager hilft bei der Installation proprietärer Geräte-"
+"Treiber.\n"
+"Installieren Sie diese nur, wenn sie wirklich nötig sind.\n"
+"Normalerweise reichen die quelloffenen Treiber aus."
 
-#: ../usr/lib/ddm/main.py:51
+#: ../usr/lib/ddm/main.py:55
 msgid ""
 "Device Driver Manager cannot be started in a live environment\n"
 "You can use the --force argument to start DDM in a live environment"
@@ -198,11 +197,11 @@ msgstr ""
 "werden.\n"
 "Ein Start mit dem Argument --force umgeht diese Beschränkung."
 
-#: ../usr/lib/ddm/main.py:78
+#: ../usr/lib/ddm/main.py:82
 msgid "Unexpected error"
 msgstr "Unerwarteter Fehler"
 
-#: ../usr/lib/ddm/main.py:79
+#: ../usr/lib/ddm/main.py:83
 msgid ""
 "DDM has failed with the following unexpected error. Please submit a bug "
 "report!"
@@ -212,7 +211,7 @@ msgstr ""
 
 #: en/help.html+html.body.h1:8
 msgid "Device Driver Manager Help"
-msgstr "Hilfe zum Gerätetreibermanager"
+msgstr "Hilfe zum Device Driver Manager"
 
 #: en/help.html+html.body.div.h2:10
 msgid "Description"
@@ -226,11 +225,11 @@ msgid ""
 "systems. The Device Driver Manager will only list those devices that are "
 "supported. It will not list any other devices then mentioned above."
 msgstr ""
-"Der Gerätetreibermanager ist ein Werkzeug, welches dem Nutzer bei der "
-"Installation von Hardwaretreibern von Dritthersteller unterstützt. Momentan "
-"können Treiber von Nvidia, ATI und Broadcom sowie der PAE Kernel für 32-bit "
-"Systeme installiert werden. Der Gerätetreibermanager listet nur unterstützte "
-"Geräte auf. Andere Treiber als oben erwähnt werden nicht angezeigt."
+"Der Device Driver Manager unterstützt den Nutzer bei der Installation von "
+"Hardwaretreibern von Drittherstellern. Momentan können Treiber von Nvidia, "
+"ATI und Broadcom sowie der PAE Kernel für 32-bit Systeme installiert werden. "
+"Der DDM listet nur unterstützte Geräte auf. Andere Treiber als oben erwähnt "
+"werden nicht angezeigt."
 
 #: en/help.html+html.body.div.h2:13
 msgid "Important"
@@ -242,9 +241,9 @@ msgid ""
 "the repositories. Make sure you have an internet connection if you want to "
 "install the drivers."
 msgstr ""
-"Der Gerätetreibermanager kann nur die Treiber installieren, die in den "
-"Repositorys vorhanden sind. Sollten Sie Treiber installieren wollen, sorgen "
-"Sie dafür, dass Sie eine Internetverbindung haben. "
+"Der Device Driver Manager kann nur in den Paketquellen vorhandene Treiber "
+"installieren. Sollten Sie Treiber installieren wollen, sorgen Sie dafür, "
+"dass Sie eine Internetverbindung haben. "
 
 #: en/help.html+html.body.div.h2:16
 msgid "Commands"
@@ -269,10 +268,10 @@ msgid ""
 "between 1000 and 5000 will use the Radeon drivers. Use \"ddm -p ati\" to "
 "remove the drivers from your system."
 msgstr ""
-"Das wird die fglrx Treiber für Ihre ATI Grafikkarte installieren, ATI "
-"Grafikkarten der Versionen HD 5000 und später werden durch die fglrx Treiber "
-"unterstützt. Versionen zwischen 1000 und 5000 nutzen die Radeon Treiber. "
-"Benutzen Sie \"ddm -p ati\" um die Treiber von Ihrem System zu entfernen."
+"Dies wird die fglrx Treiber für Ihre ATI Grafikkarte der Versionen HD 5000 "
+"und später installieren. Versionen zwischen 1000 und 5000 nutzen die "
+"quelloffenen Radeon Treiber. Benutzen Sie \"ddm -p ati\" um die Treiber von "
+"Ihrem System zu entfernen."
 
 #: en/help.html+html.body.div.h3:24
 msgid "# ddm -i nvidia"
@@ -284,10 +283,10 @@ msgid ""
 "select the Bumblebee drivers in case you have a hybrid card (both Nvidia and "
 "Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
 msgstr ""
-"Das wird die passenden Treiber für Ihre Nvidia Grafikkarte wählen. Sollten "
-"Sie eine Hybridgrafikkarte besitzen (gleichzeit Nvidia und Intel) werden die "
-"Bumblebee Treiber ausgewählt. Benutzen Sie \"ddm -p nividia\" um die Treiber "
-"von Ihrem System zu entfernen."
+"Dies wird die passenden Treiber für Ihre Nvidia Grafikkarte wählen. Für "
+"Hybridgrafikkarten (gleichzeitig Nvidia und Intel) werden die Bumblebee "
+"Treiber ausgewählt. Benutzen Sie \"ddm -p nividia\" um die Treiber von Ihrem "
+"System zu entfernen."
 
 #: en/help.html+html.body.div.h3:27
 msgid "# ddm -i open"
@@ -298,9 +297,8 @@ msgid ""
 "You can use this command if you want to revert back to the open Nouveau "
 "drivers. It will remove any proprietary drivers from your system."
 msgstr ""
-"Sie können diesen Befehl benutzen, wenn Sie zu den offenen Nouveau Treiber "
-"zurückkehren wollen. Er wird sämtliche proprietären Treiber von Ihrem System "
-"entfernen."
+"Dieser Befehl ermöglicht die Rückkehr zum quelloffenen Nouveau-Treiber. Er "
+"wird sämtliche proprietären Treiber von Ihrem System entfernen."
 
 #: en/help.html+html.body.div.h3:30
 msgid "# ddm -i broadcom"
@@ -311,7 +309,7 @@ msgid ""
 "This command will install the right driver for your wireless Broadcom "
 "adapter. Use \"ddm -p broadcom\" to remove the drivers from your system."
 msgstr ""
-"Dieser Befehl wird die passenden Treiber für Ihre Broadcom W-LAN-Adapter "
+"Dieser Befehl wird die passenden Treiber für Ihren Broadcom W-LAN-Adapter "
 "installieren. Benutzen Sie \"ddm -p broadcom\" um die Treiber von Ihrem "
 "System zu entfernen."
 
@@ -325,11 +323,10 @@ msgid ""
 "OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that "
 "you cannot remove the kernel when you are currently booted into that kernel."
 msgstr ""
-"Das wird den PAE Kernel auf einem Multi-Prozessor.System mit einem 32-bit "
-"Betriebssystem OS installieren. Benutzen Sie \"ddm -p pae\" um den PAE "
-"Kernel von Ihrem System zu entfernen. Beachten Sie, dass der Kernel nicht "
-"deinstalliert werden kann, wenn Sie Ihr Betriebssystem gleichzeitig mit "
-"diesem in diesen Kernel gestartet haben."
+"Dies wird den PAE Kernel für 32-bit Betriebssysteme auf Multi-Prozessor-"
+"Systemen installieren. Benutzen Sie \"ddm -p pae\" um den PAE Kernel von "
+"Ihrem System zu entfernen. Der Kernel kann nicht deinstalliert werden kann, "
+"während er in Benutzung ist."
 
 #: en/help.html+html.body.div.h3:36
 msgid "# ddm -i fixbumblebee"
@@ -337,7 +334,7 @@ msgstr "# ddm -i fixbumblebee"
 
 #: en/help.html+html.body.div.p:37
 msgid "This will try to fix a Bumblebee install."
-msgstr "Das wird die Reparatur einer Bumblebee Installation versuchen."
+msgstr "Dies wird die Reparatur einer Bumblebee-Installation versuchen."
 
 #: en/help.html+html.body.div.h2:39
 msgid "Log"
